GNOME Bugzilla – Bug 732909
9c37b3de ("Don't use GObjectClass.constructor") breaks empathy
Last modified: 2014-08-16 09:46:39 UTC
For a while empathy has been crashing on startup; I have now bisected it to this particular commit. commit 9c37b3de7466a22d4c784657a86c522e2a4f118a Author: Jasper St. Pierre <jstpierre@mecheye.net> Date: Thu Jun 26 18:22:42 2014 -0400 gtk: Don't use GObjectClass.constructor Use the newer constructed instead, which has a fast path in GObject. Here's the empathy trace: Program terminated with signal SIGSEGV, Segmentation fault.
+ Trace 233793
This is a (latent) empathy bug that we've now made visible: it doesn't chain up in constructed, see empathy.c:740
Created attachment 280256 [details] [review] libempathy-gtk: chain GtkCombobox subclass constructors to parent
I only did it to those causing direct crashes, that is the GtkCombobox subclasses (EmpathyAccountChooser and EmpathyProtocolChooser), a full review of all classes would certainly be necessary.
*** Bug 733639 has been marked as a duplicate of this bug. ***
This patch works, please merge it. I get a similar crash if Google Talk accounts are enabled. I'll file a separate bug for that.
Review of attachment 280256 [details] [review]: This looks obviously correct and fixes the problem. Plus cassidy gave his blessings in #empathy on GIMPNet: 12:34 <rishi> http://bugzilla.gnome.org/show_bug.cgi?id=732909 12:37 <cassidy> oh yeah I have to look at it. But if the patch works for you feel free to merge it tbh
*** Bug 734900 has been marked as a duplicate of this bug. ***