libempathy-gtk: chain GtkCombobox subclass constructors to parent

https://bugzilla.gnome.org/show_bug.cgi?id=732909